cmake_minimum_required(VERSION 3.9)
set(CMAKE_CXX_STANDARD 14)
project( proyecto_qt )
set(OpenCV_DIR=/home/dmarino/Descargas/opencv-4.5.5)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( output main.cpp )
target_link_libraries( output ${OpenCV_LIBS} )

find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
